fixed the resume page so that it works on FireFox

--- a/css-resume.css
+++ b/css-resume.css
@@ -1,5 +1,4 @@
 body {
-  /*background-color: #ff571b;*/
   background-color: #5ab75c;
 }
 
@@ -8,17 +7,11 @@ body {
   font-family: "Open Sans Condensed";
 }
 
-.master-container {
-  padding-left: 7%;
-  min-height: 700px;
-  height: auto;
-  padding-bottom: 7%;
-}
-
 .header-container {
   width: 100%;
   float: left;
-  padding-top: 2%;
+  padding-top: 10px;
+  padding-left: 20px;
 }
 
 #header {
@@ -34,43 +27,29 @@ body {
   -webkit-margin-after: 0em;
   width: 45%;
   float: left;
-  padding-top: 2.7%;
+  padding-top: 40px;
   padding-left: 1%;
 }
 
-.education-container{
-  color: white;
+.topic{
+  clear: both;
+  
 }
 
-.main-header {
-  -webkit-margin-before: 0em;
-  -webkit-margin-after: 0em;
-  float: left;
+caption{
+  text-align: left;
   padding-left: 3%;
-  font-size: 180%;
+  font-size: 190%;
   width: 100%;
 }
 
-.main-text{
-  -webkit-margin-before: 0em;
-  -webkit-margin-after: 0em;
-  float: left;
-  padding-left: 6%;
+.text{
+  font-size: 160%;
 }
 
-.indent-text{
-  -webkit-margin-before: 0em;
-  -webkit-margin-after: 0em;
-  float: left;
-  padding-left: 4%;
-  width: 65%;
-}
-
-.degree{
-  font-size: 100%;
-}
-#degree{
-  padding-left: 8%;
+.sub-text {
+  text-align: left;
+  font-size: 130%;
 }
 
 .honor {
@@ -88,6 +67,6 @@ table{
 .sub-text{
   -webkit-margin-before: 0em;
   -webkit-margin-after: 0em;
-  padding-left: 8%;
-  font-size: 100%;
+  padding-left: 25px;
+  font-size: 120%;
 }
